--- a/D_AccountingCore/D_AccountingCore.csproj
+++ b/D_AccountingCore/D_AccountingCore.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FixDescriptionCase.cs" />
     <Compile Include="GrayUnaccessibleCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadonlyAmountCase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
