Commands changed : no amount changed + undoredo class

--- a/D_Accounting/D_Accounting.csproj
+++ b/D_Accounting/D_Accounting.csproj
@@ -53,13 +53,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UndoRedoControl.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="AddAccountCommand.cs" />
     <Compile Include="AddOperationCommand.cs" />
-    <Compile Include="AmountChangedCommand.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
