--- a/D_AccountingCore/D_AccountingCore.csproj
+++ b/D_AccountingCore/D_AccountingCore.csproj
@@ -48,6 +48,7 @@
     <Compile Include="OkayCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadonlyAmountCase.cs" />
+    <Compile Include="XmlTags.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
