--- a/D_Accounting/D_Accounting.csproj
+++ b/D_Accounting/D_Accounting.csproj
@@ -55,6 +55,7 @@
     </ApplicationDefinition>
     <Compile Include="ListCasesXmlReaderParser.cs" />
     <Compile Include="ListCasesXmlWriterParser.cs" />
+    <Compile Include="StringToFileInfoConverter.cs" />
     <Compile Include="UndoRedoControl.cs" />
     <Compile Include="WriteDataFilePathDialog.xaml.cs">
       <DependentUpon>WriteDataFilePathDialog.xaml</DependentUpon>
