--- a/D_Accounting/D_Accounting.csproj
+++ b/D_Accounting/D_Accounting.csproj
@@ -57,8 +57,8 @@
     <Compile Include="ListCasesXmlWriterParser.cs" />
     <Compile Include="StringToFileInfoConverter.cs" />
     <Compile Include="UndoRedoControl.cs" />
-    <Compile Include="WriteDataFilePathDialog.xaml.cs">
-      <DependentUpon>WriteDataFilePathDialog.xaml</DependentUpon>
+    <Compile Include="ModifyDataFilePathDialog.xaml.cs">
+      <DependentUpon>ModifyDataFilePathDialog.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -79,7 +79,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="WriteDataFilePathDialog.xaml">
+    <Page Include="ModifyDataFilePathDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
