--- a/D_Accounting/D_Accounting.csproj
+++ b/D_Accounting/D_Accounting.csproj
@@ -53,6 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AppSettingsHandler.cs" />
     <Compile Include="ListCasesXmlReaderParser.cs" />
     <Compile Include="ListCasesXmlWriterParser.cs" />
     <Compile Include="StringToFileInfoConverter.cs" />
