New menubutton impl

--- a/D_Accounting/D_Accounting.csproj
+++ b/D_Accounting/D_Accounting.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ListCasesXmlWriterParser.cs" />
     <Compile Include="FileInfoToStringConverter.cs" />
     <Compile Include="LoadDataCommand.cs" />
+    <Compile Include="NewDataCommand.cs" />
     <Compile Include="ShowMessageBoxEventArgs.cs" />
     <Compile Include="UndoRedoControl.cs" />
     <Compile Include="ModifyDataFilePathDialog.xaml.cs">
